Content for the new Design Your Whirled contest page.

--- a/src/gwt/client/landing/LandingMessages.properties
+++ b/src/gwt/client/landing/LandingMessages.properties
@@ -247,45 +247,64 @@ roomsTagline = Play games.  Make friends.<br/>  Make stuff.
 # Design Your Whirled contest landing page
 
 designconIntroTitle = About the Contest
-designconIntroText = <p><a href="#landing">Whirled</a> is a flash based multiplayer \
-  social networking and gaming site.  You can create your own rooms in whirled, including \
-  backdrops, furniture, toys, games and pets.</p> \
-  <p>The Design Your Whirled Contest is a monthly contest to search for the most interesting, \
-  original and beautiful rooms on Whirled.</p>
+designconIntroText = <p><a href="#landing">Whirled</a> is a virtual playland where you can let \
+  your imagination run wild. Ever wanted to live in a world of your own? Now''s your chance! \
+  We are challenging you to create the coolest, best looking, most fun space in all of Whirled. \
+  Whether you use traditional media or are a digital whiz, show us your creation skills. \
+  Originality is a must, and keeping visitors entertained in your room is always a good idea. \
+  Come on in and show us your skills!</p>
 
 designconPrizesTitle = Prizes
-designconPrizesText = <p>First place wins a Cintiq 12WX.  Five runners-up will receive Whirled \
-  prize packs including stickers and buttons.  All the winning rooms will be prominently linked \
-  in Whirled.</p>
+designconPrizesText = <img src="/images/landing/contests/designcon_prizes.jpg" /><br /> \
+  <ul> \
+    <li>1st Prize: Wacom Cintiq 12WX</li> \
+    <li>2nd Prize: Wacom Intuos3 6X11</li> \
+    <li>3rd Prize: Wacom Bamboo</li> \
+  </ul> \
+  <p>Five runners up will win Whirled stickers and buttons. All winning rooms will be featured \
+  by Whirled.</p>
 
-designconCreateTitle = How To Create a Room
-designconCreateText = <p>After you <a href="#account-signup">create an account</a>, visit \
-  <a href="#world-home">your home</a> by clicking Me and then the home-shaped icon, or by \
-  clicking the Whirled logo at the top of every page.</p> \
-  <p>Customize your room with purchases from <a href="#shop">the Shop</a> or creations that \
-  you upload.  Visit the <a href="http://wiki.whirled.com">Whirled Wiki</a> to learn more about \
-  creating custom items for Whirled.</p>
-  
-designconEnterTitle = How to Enter the Contest
-designconEnterText = <p>You may enter as many rooms as you like.  To enter a finished room, \
-  copy the link by clicking on the Share button at the bottom of your room (looks like &lt; \
-  &gt;) then clicking on Grab the link, then post the link to <a href="">this discussion \
-  thread</a>.  You''ll be notified by email if you win!</p>
+designconEnterTitle = How To Enter
+designconEnterText = <img src="/images/landing/contests/designcon_howtoenter.jpg" /><br /> \
+  <ol> \
+    <li>Create a room: After you create an account, visit your home by clicking Me and then \
+      the home-shaped icon, or by clicking the Whirled logo at the top of every page. You can \
+      also <a href="http://wiki.whirled.com/Room#Creating_a_New_Room">get new rooms</a>.</li> \
+    <li>Design your room: Customize your room with stuff from the <a href="#shop">Shop</a> or \
+      creations that you upload. Visit the <a href="http://wiki.whirled.com">Whirled Wiki</a> \
+      to learn more about creating custom items for Whirled and \
+      <a href="http://wiki.whirled.com/Edit_your_room">decorating your room</a>.</li> \
+    <li>To enter a finished room, copy the link by clicking on the Share button at the bottom \
+      of your room (looks like < >) then clicking on Grab the link, then post the link to \
+      <a href="http://www.whirled.com/#groups-t_3906 ">this discussion thread</a>. You''ll be \
+      notified by Whirled mail if you win!</li> \
+  </ol> \
+  <p>For more information <a href="http://wiki.whirled.com/Design_Your_Whirled">see this \
+  page</a></p>
   
 designconRulesTitle = Rules and Judging
 designconRulesText = \
   <ul> \
-    <li>Contest entries will be judged based on technical skill, originality, and \
-        creativity.</li> \
     <li>Entrants must be 13 years old or older to participate in the Design Your Whirled \
-        Contest</li> \
-    <li>Entries may use any item in the Whirled Shop to create their Whirled.  Creating your \
-        own original items is encouraged, but not required.</li> \
-    <li>Individual rooms and multi-room Whirleds will both be considered.</li> \
-    <li>No copyrighted images can be used in any way.</li> \
+        Contest.</li> \
+    <li>Entries may use any item in the Whirled Shop to create their room. Creating your own \
+        original items is encouraged, but not required.</li> \
+    <li>Individual rooms and multi-room Groups will both be considered.</li> \
+    <li>Multiple entries are allowed.</li> \
+    <li>The contest is open to international entrants.</li> \
+    <li>Entries must be submitted between the dates of Dec 15, 2008 12:00AM PST and Jan 15, \
+        2009 11:59 PST</li> \
+    <li>No purchase necessary to enter contest.</li> \
    </ul> \
-  <p><a href="http://wiki.whirled.com/">Please see this page for additional terms and \
-  conditions.</a></p>
+  <p>Contest entries will be judged based on technical skill, originality and creativity by \
+  Three Rings artists and staff. This month we also have two special guest judges from the \
+  Whirled creator community.</p> \
+  <ul> \
+    <li>Three Ring Judges: Cleaver, Billiam and Agent Vortex.</li> \
+    <li>Guest Judges from the Whirled Creator Community: Moogie and Nordenx</li> \
+  </ul> \
+  <p><a href="http://wiki.whirled.com/Design_Your_Whirled/Complete_and_Official_Rules">See \
+  this page for complete terms and conditions.</a></p>
 
   
 
