Remove the Delete, Reply and Back to Inbox buttons for conversation reviews

--- a/src/gwt/client/mail/MailMessages.properties
+++ b/src/gwt/client/mail/MailMessages.properties
@@ -30,7 +30,7 @@ mailDeleteTip = Delete this conversation
 # ConvoPanel
 
 convoWith = Conversation with {0}
-convoSpectate = Conversation For Review
+convoReview = Conversation For Review
 
 convoBack = Back to Inbox
 convoDelete = Delete
