Link to judge profile pages on Design contest.

--- a/src/gwt/client/landing/LandingMessages.properties
+++ b/src/gwt/client/landing/LandingMessages.properties
@@ -300,8 +300,10 @@ designconRulesText = \
   Three Rings artists and staff. This month we also have two special guest judges from the \
   Whirled creator community.</p> \
   <ul> \
-    <li>Three Ring Judges: Cleaver, Billiam and Agent Vortex.</li> \
-    <li>Guest Judges from the Whirled Creator Community: Moogie and Nordenx</li> \
+    <li>Three Ring Judges: <a href="#people-8">Cleaver</a>, <a href="#people-316">Billiam</a> \
+        and <a href="#people-12770">Agent Vortex</a>.</li> \
+    <li>Guest Judges from the Whirled Creator Community: <a href="#people-8842">Moogie</a> and \
+        <a href="#people-1855">Nordenx</a></li> \
   </ul> \
   <p><a href="http://wiki.whirled.com/Design_Your_Whirled/Complete_and_Official_Rules">See \
   this page for complete terms and conditions.</a></p>
