--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -116,6 +116,14 @@ permaNameConfigured = Your Permaname has been configured. Note: you must use \
   your Permaname to log onto the Forums and the Wiki. We plan to fix this in \
   the future.
 
+charitiesHeader = Charities
+charities = Whenever you make a purchase in Whirled, a donation will be made to the charity of \
+	your choice.  You can select the charity below.  Selecting 'Random Charity' will automatically \
+	select from one of these charities at random.
+selectCharity = Select charity:
+defaultCharity = <Random Charity>
+echarityUpdated = The selected charity has been successfully updated.
+  
 #
 # Passport
 
