--- a/src/gwt/client/shell/ServerMessages.properties
+++ b/src/gwt/client/shell/ServerMessages.properties
@@ -59,6 +59,7 @@ cost_updated = The price for this item has been updated.  Please refresh the pag
 no_delist_listed_subitem_haver = You must delist all sub-items (trophies, item packs, etc.) \
   before you can delist this master item. Perhaps you just want to change this item''s \
   pricing to hidden?
+charities_cannot_list_for_bars = Charities cannot list an item in bars, only coins.
 
 #
 # Swiftly server messages
