--- a/src/gwt/client/shop/ShopMessages.properties
+++ b/src/gwt/client/shop/ShopMessages.properties
@@ -98,6 +98,9 @@ boughtAudioUsage = Click above to use your new song as the soundtrack for this r
 boughtPetUsage = Click above to add your new pet to this room!
 boughtOtherUsage = Click above to add your new item to this room!
 
+donatedToCharity = {0} has been donated to 
+changeCharity = (Change Charity)
+
 #
 # BuyRemixPanel
 
