Groups can now be marked as official in the database and in the group detail editor

--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -42,6 +42,8 @@ editCharter = Charter
 editCatalogType = Shop Browse Type
 editCatalogTag = Shop Tag
 
+editOfficial = Official Whirled Group
+
 errInvalidGroupName = The group name must start with a character or number.
 errTagsOnExclusive = In order to change the group policy to Exclusive, please remove all tags.
 
