List group categories (tags) across the top of the main groups page.  Also rearrange the header a little to make it shorter.

--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -59,20 +59,18 @@ galaxyMyGroupsSeeAll = See all...
 galaxySearchTitle = Search Groups
 
 galaxyIntroBlurb = Groups are a fun way to build your own virtual world.  Create a group hall, \
-  gather friends, post discussions and throw parties!  Think you''ve got what it takes to create \
-  the next hot hangout on Whirled?  <a href="#groups-edit">Make your own</a> Group!
-galaxyCreate = + Create Group
+  gather friends, post discussions and throw parties!
+galaxyIntroCreate = Think you''ve got what it takes to create \
+  the next hot hangout on Whirled?  <a href="#groups-edit">Make your own Group!</a>
+
+galaxyCategoryTitle = Categories:
+galaxyCategoryAll = Show All Groups
 
 galaxyMemberCount = {0} members
 galaxyPeopleInRooms = {0} in hall now
 galaxyThreadCount = {0} threads
 
 galaxyNoGroups = No groups found!
-
-galaxyPopularTags = Popular Tags:
-galaxyNoPopularTags = No popular tags found!
-galaxyCurrentTag = Showing Tag: {0}
-galaxyTagClear = clear
 
 galaxySortBy = Sort By:
 sortByNewAndPopular = New & Popular
