Added official groups to galaxy panel
Rejigged styles to be for both my groups and official groups. Drive by fix for setting MyGroupCard.official

--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -52,6 +52,7 @@ errTagsOnExclusive = In order to change the group policy to Exclusive, please re
 
 galaxyTitle = Groups
 galaxyMyGroupsTitle = My Groups
+galaxyOfficialGroupsTitle = Whirled Groups
 galaxyMyGroupsNone = You have no groups
 galaxyMyGroupsDiscussions = discussions
 galaxyMyGroupsSeeAll = See all...
