--- a/src/gwt/client/games/GamesMessages.properties
+++ b/src/gwt/client/games/GamesMessages.properties
@@ -119,6 +119,7 @@ gmpNoMetrics = This game has not yet recorded any scores.
 
 gmpSingleHeader = Single-player Score Distribution
 gmpMultiHeader = Multiplayer Score Distribution
+gmpGameMode = (for game mode: {0})
 
 gmpTotalCount = Total scores recorded: {0}
 gmpMaxPercentile = Score needed for 99th percentile: {0}
