Implement game mode specific resetting of percentilers. I think this is the way to go, at least until we get developers who use a dozen modes.

--- a/src/gwt/client/games/GamesMessages.properties
+++ b/src/gwt/client/games/GamesMessages.properties
@@ -118,8 +118,9 @@ gmpLoading = Loading metrics...
 gmpNoMetrics = This game has not yet recorded any scores.
 
 gmpSingleHeader = Single-player Score Distribution
+gmpSingleHeaderWithMode = Single-player Score Distribution (for game mode: {0})
 gmpMultiHeader = Multiplayer Score Distribution
-gmpGameMode = (for game mode: {0})
+gmpMultiHeaderWithMode = Multiplayer Score Distribution (for game mode: {0})
 
 gmpTotalCount = Total scores recorded: {0}
 gmpMaxPercentile = Score needed for 99th percentile: {0}
