Display the deduct panel for bars and bling on the transactions page (admin only).

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -210,9 +210,10 @@ cashOutAmountWorth = Worth: {0}
 cashOutBelowMinimum = You cannot cash out until you have at least {0} bling.
 cancelCashOutSuccess = Successfully cancelled your pending cash out request.
 
-deductTip = Deduct coins:
+deductTip = Deduct {0}:
 deductButton = Deduct
-deductSuccess = Successfully deducted {0} coins.
+deductSuccess = Successfully deducted {0} {1}.
+deductMustBePositive = Cannot deduct a zero or negative amount.
 
 #
 # Deviant Art Contest page
