Revamped and extended whirled links page to implement Bill's mockup, with some changes. * Page is now divided into four sections for the dimensions of the logos and the link destination * The html code appears in one box at the top and changes as you click * Include an orange title box under the link bar * TODO: different link targets

--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -283,10 +283,18 @@ shareLinkToContent = Share your Room and Games! \
 
 #
 # LinkToWhirledPanel
-linkToWhirledIntro = Copy the html code below to put cool Whirled graphics on your own website. \
-   Earn Coins, Bars and Bling when your users click and come to Whirled. \
+linkToWhirledTitle = Share Whirled
+linkToWhirledIntro = Earn money by promoting Whirled!
+linkToWhirledInstructions = Click the image you want to include on your blog or website, then copy \
+   and paste the html code that appears in the box below.<br><br>Your id is stored in the code and \
+   when new users join Whirled through your link you earn coins, bars and bling. \
    <a href="http://wiki.whirled.com/Affiliate">More Info</a>.
-
+linkToWhirledSquareImages = 125x125 Buttons
+linkToWhirledTinyImages = Tiny Banners
+linkToWhirledGameImages = Game Banners
+linkToWhirledGroupImages = Group Banners
+linkToWhirledPopupTitle = HTML Code
+linkToWhirledClickBelow = Click an image below...
 #
 # GreeterPanel
 greetersTitle = Friendly People
