After some adventures with booched groups in my postgres database, here's some beginning skeleton of Medals.  * UI stuff is wrapped up in devDeployment checks.  Wanted to get this in now so I don't forget it    and accidentally release something.  * Editing medals is going to be a minimalistic, manager-only affair.  So is awarding medals.  * Viewing medals will be pretty, and is currently in the process of mocking.

--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -98,7 +98,9 @@ detailMembers = Members
 
 detailEdit = Edit this group
 detailReadCharter = Read Charter
+detailViewMedals = View Medals
 detailManageRooms = Manage Rooms
+detailEditMedals = Edit Medals
 detailPlayGame = Play the Game!
 
 detailJoin = Join this group
@@ -132,6 +134,8 @@ detailTabCharter = Charter
 detailTabMembers = Members
 detailTabRooms = Rooms
 detailTabDiscussions = Recent Discussions
+detailTabViewMedals = Medals
+detailTabEditMedals = Edit Medals
 
 detailBackToDiscussions = << Back to Discussions
 detailNoCharter = This group has nothing to say for itself.
