Second pass at group page links.  Commens included with intentions.
On a tangential note: I find it pretty amusing that almost exactly 2 years after I started, I'm once
again working on the Group page, which was my first project at OOO.

--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -100,7 +100,7 @@ detailEdit = Edit this group
 detailReadCharter = Read Charter
 detailViewMedals = View Medals
 detailManageRooms = Manage Rooms
-detailEditMedals = Edit Medals
+detailAwardMedals = Award Medals
 detailPlayGame = Play the Game!
 
 detailJoin = Join this group
@@ -135,7 +135,7 @@ detailTabMembers = Members
 detailTabRooms = Rooms
 detailTabDiscussions = Recent Discussions
 detailTabViewMedals = Medals
-detailTabEditMedals = Edit Medals
+detailTabAwardMedals = Award Medals
 
 detailBackToDiscussions = << Back to Discussions
 detailNoCharter = This group has nothing to say for itself.
