More skeleton work.  Panels for showing the medal grid and for creating/editing medals.

--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -189,3 +189,6 @@ myHeaderName = Name
 myHeaderLatest = Latest Post
 myHeaderThreadCount = Threads
 myHeaderPostCount = Posts
+
+# MedalListPanel
+medalListCreateMedal = Create Medal
