Just noticed that the column headers were not localizable

--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -166,6 +166,14 @@ reportBling = Bling
 reportCreator = Creator
 reportAffiliates = Affiliates
 
+reportColumnHow = How
+reportColumnWhen = When
+reportColumnDebit = Debit
+reportColumnCredit = Credit
+reportColumnBalance = Balance
+reportColumnIncome = Income
+reportColumnBuyer = Buyer
+
 buyBars = Buy Bars!
 
 blingHeader = Bling
