New UI for viewing item transactions, linked to from flagged item queue.

--- a/src/gwt/client/adminz/AdminMessages.properties
+++ b/src/gwt/client/adminz/AdminMessages.properties
@@ -75,6 +75,14 @@ reviewDeletionMailHeader = Item Deleted
 reviewDeletionMailMessage = The item "{0}" has been deleted by the game administrators: {1}
 
 reviewErrDeletionFailed = Failed to delete messages and/or notify owners: {0}
+reviewItemTransactionsTitle = Item Transactions
+reviewItemTransactionsHeader = Recent Transactions for {0}
+reviewItemNoTransactions = There are no transactions recorded.
+reviewItemColumnWhen = When
+reviewItemColumnHow = Description
+reviewItemColumnIncome = Amount
+reviewItemColumnBuyer = Buyer
+reviewItemColumnWho = Account
 
 #
 # Item Inspector
