--- a/src/gwt/client/shell/ServerMessages.properties
+++ b/src/gwt/client/shell/ServerMessages.properties
@@ -46,6 +46,7 @@ no_such_item = That item could not be located.
 item_in_use = This item is being used in the Whirled.
 item_listed = This item is listed in the shop. You must delete the shop \
   listing in order to delete this item.
+item_not_listed = This item is not listed.
 
 #
 # Catalog server messages
