Add an orange Sign Up button to the How To Enter section of the design contest page.

--- a/src/gwt/client/landing/LandingMessages.properties
+++ b/src/gwt/client/landing/LandingMessages.properties
@@ -308,5 +308,5 @@ designconRulesText = \
   <p><a href="http://wiki.whirled.com/Design_Your_Whirled/Complete_and_Official_Rules">See \
   this page for complete terms and conditions.</a></p>
 
-  
+designconSignup = Sign Up  
 
