--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -149,6 +149,9 @@ postedOn = on {0}
 deletePost = [delete]
 complainPost = [complain]
 
+rating = Rating: {0}
+showComment = [show]
+
 deletePostConfirm = Are you sure you want to delete this comment?
 
 #
