Add refund transactions when support delete an item

--- a/src/gwt/client/shell/DynamicMessages.properties
+++ b/src/gwt/client/shell/DynamicMessages.properties
@@ -354,6 +354,8 @@ m_item_magicfree = Magic-purchased <a href="/#shop-l_{1}_{2}">{0}</a>.
 m_item_sold = Sold <a href="/#shop-l_{1}_{2}">{0}</a>.
 m_item_affiliate = Referred player <a href="/#people-{1}">{0}</a> purchased an item.
 m_item_charity = The player <a href="/#people-{1}">{0}</a> made a donation while purchasing an item. 
+m_item_refund = Refund received for {0}.
+m_item_refunded = Issued refund for {0}.
 m_played_game = Award from playing <a href="/#games-d_{1}">{0}</a>.
 m_invited_friend_joined = Award for inviting <a href="/people-{1}">{0}</a> to Whirled.
 m_transfer_from_guest = Transferred coins from your guest account when you registered.
