Give the support staff some indication of the number of refunds issued. Changed wording of email to item owners and creator.

--- a/src/gwt/client/adminz/AdminMessages.properties
+++ b/src/gwt/client/adminz/AdminMessages.properties
@@ -69,10 +69,13 @@ reviewDeletionDo = Delete
 reviewDeletionDont = Cancel
 reviewDeletionPrompt = To delete this item, enter a message to be sent to the item''s creator \
   (and anyone who owns the item if it was listed in the catalog):
-reviewDeletionSuccess = Successfully deleted {0} item(s) and notified owner(s).
+reviewDeletionSuccess = Successfully deleted {0} item(s) and notified owner(s). {1} refund \
+  transaction(s) were created.
 
 reviewDeletionMailHeader = Item Deleted
-reviewDeletionMailMessage = The item "{0}" has been deleted by the game administrators: {1}
+reviewDeletionMailMessage = The item "{0}" has been deleted by the game administrators. Where \
+  possible, all account credits and debits associated with the purchase of the item have been \
+  reverted. {1}
 
 reviewErrDeletionFailed = Failed to delete messages and/or notify owners: {0}
 reviewItemTransactionsTitle = Item Transactions
