--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -120,6 +120,7 @@ icPickPhoto = Choose an Image from Your Stuff:
 icOr = or
 icUploadPhoto = Upload an Image from Your Computer:
 icUploadGo = Use This!
+icRestrictedError = The chosen image is required to be {0} pixels wide and {1} pixels tall.
 
 errPhotoNotImage = Images must be a GIF, PNG or JPG.
 
@@ -143,7 +144,7 @@ commentText = Enter the text of your comment:
 commentPosted = Comment posted.
 commentDeleted = Comment deleted.
 commentDeletionNotAllowed = You are not permitted to delete that comment.
-commentInvalid = Comments must have at least 8 letters. 
+commentInvalid = Comments must have at least 8 letters.
 
 postedOn = on {0}
 deletePost = [delete]
