Some refactoring to better manage the growing list of pages that wish to be displayed within the group detail page's content area.

--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -201,3 +201,4 @@ editMedalName = Name
 editMedalDescription = Description
 editMedalIcon = Icon
 editMedalChooseIconImage = Choose Image...
+editMedalAllRequired = All fields are required when creating or editing a Medal.
