--- a/src/gwt/client/shell/ServerMessages.properties
+++ b/src/gwt/client/shell/ServerMessages.properties
@@ -79,7 +79,8 @@ already_friend = You are already their friend.
 #
 # Group messages
 
-group_name_in_use = That whirled name is already taken. Please choose another.
+group_name_in_use = That group name is already taken. Please choose another.
+group_medal_name_in_use = That medal name is already taken in this group.  Please choose another.
 
 #
 # Forum messages
