Having now received the mockup, I discover that the medal list is going to live on its own page, not sit in the content area of the group detail page.  While I was shuffling that stuff around, I created an enum for GroupsPage navigation because all of the magic strings floating around were irritating me.  I didn't find all of the magic string usage, but I did clean up some of it.
Can we just nix the whole Issues system?  The magic stringage would have been much less of a big 
deal if all of the Issues-related stuff weren't there, and we haven't touched that stuff in ages.

--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -134,7 +134,6 @@ detailTabCharter = Charter
 detailTabMembers = Members
 detailTabRooms = Rooms
 detailTabDiscussions = Recent Discussions
-detailTabViewMedals = Medals
 detailTabAwardMedals = Award Medals
 
 detailBackToDiscussions = << Back to Discussions
@@ -191,10 +190,12 @@ myHeaderThreadCount = Threads
 myHeaderPostCount = Posts
 
 # MedalListPanel
-medalListCreateMedal = Create Medal
-medalListEditMedal = Edit Medal
+medalListTitle = Group Medals
+medalListAddMedal = + add medal
 
 # EditMedalPanel
+editMedalCreate = Create Medal
+editMedalEdit = Edit Medal
 editMedalSubmit = submit
 editMedalCancel = cancel
 editMedalName = Name
