Added ability for admins to view status of the Panopticon client on the world server.

--- a/src/gwt/client/adminz/AdminMessages.properties
+++ b/src/gwt/client/adminz/AdminMessages.properties
@@ -35,6 +35,7 @@ browseButton = Player Browser
 viewABTests = View or Create A/B Tests
 viewBureaus = View Bureau Activity
 viewExchange = Exchange
+panopticonStatus = Panopticon Status
 
 #
 # Issue Invites Popup
@@ -263,3 +264,17 @@ contestsDeleteConfirm = Undo is hard. Confirmation is easy. \
 
 statsType = Type:
 statsRefresh = Refresh
+
+#
+# PanopticonStatusPanel
+
+panTimeStarted = Time logger started:
+panQueuedEvents = Queued events:
+panDroppedEvents = Dropped events:
+panEventsSent = Events sent:
+panOverflowed = Events overflowed to disk:
+panLastTimeEnteredRetryMode = Last time entered into retry mode:
+panLastTimeRecoveredFromRetryMode = Last time recovered from retry mode:
+panLastTempFailed = Last time event temporarily failed:
+panLastTempFailure = Last Temporary Failure:
+panLastPermFailure = Last Permanent Failure:
