Refactored the way that item flags are stored in preparation to allow usrs to enter comments when flagging items * New repo and record for a single incident of flagging * New user interface for support to view all flags (no collapsing of multiple flags on the same item) * Migrate flagged column in old items to a row in a the new table * Split up the TagDetailPanel interface into 2 rather than have supportTags and setTag

--- a/src/gwt/client/adminz/AdminMessages.properties
+++ b/src/gwt/client/adminz/AdminMessages.properties
@@ -78,6 +78,10 @@ reviewDeletionMailMessage = The item "{0}" has been deleted by the game administ
   possible, all account credits and debits associated with the purchase of the item have been \
   reverted. {1}
 
+reviewColumnThumbnail = Thumbnail
+reviewColumnComment = Comment
+reviewColumnActions = Actions
+
 reviewErrDeletionFailed = Failed to delete messages and/or notify owners: {0}
 reviewItemTransactionsTitle = Item Transactions
 reviewItemTransactionsHeader = Recent Transactions for {0}
