The high-level structure of the Medals page, facilitated greatly by peeking at the Contests page.

--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -191,7 +191,10 @@ myHeaderPostCount = Posts
 
 # MedalListPanel
 medalListTitle = Group Medals
+medalListHeader = Medals
 medalListAddMedal = + add medal
+medalListIntro = Here you will find a list of all medals awarded by the group as well as members \
+who have received them.
 
 # EditMedalPanel
 editMedalCreate = Create Medal
