--- a/src/gwt/client/people/PeopleMessages.properties
+++ b/src/gwt/client/people/PeopleMessages.properties
@@ -276,7 +276,8 @@ shareIntro = Invite Friends to Whirled and earn Coins, Bars and Bling! Have fun 
 	and earn 30% of everything they spend at the Shop. If you invite lots of friends, you could \
 	earn enough to Cash Out your Bling into real money! \
 	<a href="http://wiki.whirled.com/Affiliate">Details</a>
-shareLinkToWhirled = Add cool Whirled graphics for your site! Or just use this URL:
+shareLinkToWhirled = <a href="/#people-invites_links">Add cool Whirled graphics</a> for your site! \
+    Or just use this URL:
 shareSendEmail = Send Email to Friends
 shareLinkToContent = Share your Room and Games! \
    <a href="http://wiki.whirled.com/Affiliate">Find out how!</a>
