Allow reboots to be scheduled (and cancelled) via GWT so that we don't have to rely on the admin panel which is fiddly.

--- a/src/gwt/client/adminz/AdminMessages.properties
+++ b/src/gwt/client/adminz/AdminMessages.properties
@@ -21,21 +21,31 @@ lackPrivileges = Your account does not have the necessary privileges to view \
 
 title = Admin Console
 browserTitle = Player Browser
+
 adminControls = Admin functions:
-supportControls = Support functions:
-inviteControls = Invitation functions:
 displayDashboard = Display Dashboard
-reviewButton = Review Flagged Items
-issueInvites = Issue Invites to Players
-promosButton = Promotions
-contestsButton = Contests
+viewExchange = Exchange
+cashOutButton = Bling Cash Outs
 statsButton = Server Stats
-affMapButton = View affiliate mappings
-browseButton = Player Browser
 viewABTests = View or Create A/B Tests
 viewBureaus = View Bureau Activity
-viewExchange = Exchange
 panopticonStatus = Panopticon Status
+
+supportControls = Support functions:
+reviewButton = Review Flagged Items
+affMapButton = View affiliate mappings
+promosButton = Promotions
+contestsButton = Contests
+browseButton = Player Browser
+
+adminReboot = Rebootski:
+rebootNow = Now!!!1!
+rebootInFive = 5 minutes
+rebootInFifteen = 15 minutes
+rebootCancel = Oops! Abort!1!!
+
+rebootScheduled = Reboot scheduled for {0} minutes.
+rebootCancelled = Reboot cancelled.
 
 #
 # Issue Invites Popup
@@ -178,7 +188,6 @@ badMemberId = Could not parse memberId: {0}.
 
 requestedCashOutsTitle = Requested Cash Outs
 charityCashOutsTitle = Charity Cash Outs
-cashOutButton = Bling Cash Outs
 cashOutTitle = Bling Cash Outs
 cashOutEmptyMessage = <Empty>
 cashOutEntryAmount = Amount: {0}
