Display the build version and time on the admin dashboard page.

--- a/src/gwt/client/adminz/AdminMessages.properties
+++ b/src/gwt/client/adminz/AdminMessages.properties
@@ -22,6 +22,9 @@ lackPrivileges = Your account does not have the necessary privileges to view \
 title = Admin Console
 browserTitle = Player Browser
 
+dashVersion = <b>Version:</b> {0}
+dashBuilt = <b>Built:</b> {0}
+
 adminControls = Admin functions:
 displayDashboard = Display Dashboard
 viewExchange = Exchange
