Starting on Los Facebook Connectiones. Only visible on dev deployments, except that on all deployments the logon tongue in the header now takes you to the logon page rather than showing an inline logon UI.

--- a/pages/index.html.in
+++ b/pages/index.html.in
@@ -32,5 +32,6 @@
   <script id="swfobject" type="text/javascript"></script>
   <script id="md5" type="text/javascript"></script>
   <script id="googanal" type="text/javascript"></script>
+  <script id="fbconnect" type="text/javascript"></script>
 </body>
 </html>
