--- a/src/gwt/client/account/AccountMessages.properties
+++ b/src/gwt/client/account/AccountMessages.properties
@@ -74,7 +74,14 @@ creatingDone = Logging in for the first time...
 # Logon page
 
 logonPageTitle = Logon
-logonPageSubmit = Logon
+
+lpLogonHeader = Logon with your Whirled account here:
+lpSubmit = Logon
+
+lpFBHeader = Logon with your Facebook account here:
+
+lpCreateHeader = Or create a free Whirled account:
+lpCreate = Create
 
 #
 # OptOutPanel
