--- a/src/gwt/client/shell/ServerMessages.properties
+++ b/src/gwt/client/shell/ServerMessages.properties
@@ -81,6 +81,7 @@ already_friend = You are already their friend.
 
 group_name_in_use = That group name is already taken. Please choose another.
 group_medal_name_in_use = That medal name is already taken in this group.  Please choose another.
+group_member_has_medal = That member has already received this medal.
 
 #
 # Forum messages
