--- a/src/gwt/client/adminz/AdminMessages.properties
+++ b/src/gwt/client/adminz/AdminMessages.properties
@@ -294,3 +294,4 @@ panLastTimeRecoveredFromRetryMode = Last time recovered from retry mode:
 panLastTempFailed = Last time event temporarily failed:
 panLastTempFailure = Last Temporary Failure:
 panLastPermFailure = Last Permanent Failure:
+panRestart = Restart Panopticon
