First pass at the medal awarding interface.  Search is throwing an exception on the server that I need to fix before I can style this up.

--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -206,3 +206,9 @@ editMedalDescription = Description
 editMedalIcon = Icon
 editMedalChooseIconImage = Choose Image...
 editMedalAllRequired = All fields are required when creating or editing a Medal.
+
+# AwardMedalsPanel
+awardMedalsMemberSearch = Member:
+awardMedalsFind = Find
+awardMedalsAward = Award
+awardMedalsMedalGranted = {0} has been granted the {1} medal.
