More work on the award medal interface.

--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -212,3 +212,5 @@ awardMedalsMemberSearch = Member:
 awardMedalsFind = Find
 awardMedalsAward = Award
 awardMedalsMedalGranted = {0} has been granted the {1} medal.
+awardMedalsNoMembersFound = No members were found matching that search.
+awardMedalsNoMedalChosen = No medal chosen to award.
