* It's now possible to restart the Panopticon client on any (or every) world server in the cluster.  This will also restart the Panopticon client running in all game servers attached to the world servers. * Updated admin Panopticon status UI, now pulls stats from the status servlet.

--- a/src/gwt/client/adminz/AdminMessages.properties
+++ b/src/gwt/client/adminz/AdminMessages.properties
@@ -284,14 +284,8 @@ statsRefresh = Refresh
 #
 # PanopticonStatusPanel
 
-panTimeStarted = Time logger started:
-panQueuedEvents = Queued events:
-panDroppedEvents = Dropped events:
-panEventsSent = Events sent:
-panOverflowed = Events overflowed to disk:
-panLastTimeEnteredRetryMode = Last time entered into retry mode:
-panLastTimeRecoveredFromRetryMode = Last time recovered from retry mode:
-panLastTempFailed = Last time event temporarily failed:
-panLastTempFailure = Last Temporary Failure:
-panLastPermFailure = Last Permanent Failure:
 panRestart = Restart Panopticon
+panRestartDescription = The button below will reset the Panopticon client on all selected world \
+	servers and all of their game servers.
+panStatusLoadError = Could not load Panopticon status.
+panStatusRequestError = Could not request Panopticon status.
