--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -195,6 +195,7 @@ medalListHeader = Medals
 medalListAddMedal = + add medal
 medalListIntro = Here you will find a list of all medals awarded by the group as well as members \
 who have received them.
+medalListEmptyList = This group has no medals defined.
 
 # EditMedalPanel
 editMedalCreate = Create Medal
