* Alphabatize the medals before we display them. * Show an Edit link that doesn't actually work yet because there's an unresolved TODO in the edit   panel.  Will start there tomorrow morning.

--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -196,6 +196,7 @@ medalListAddMedal = + add medal
 medalListIntro = Here you will find a list of all medals awarded by the group as well as members \
 who have received them.
 medalListEmptyList = This group has no medals defined.
+medalListEdit = Edit
 
 # EditMedalPanel
 editMedalCreate = Create Medal
