--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -208,6 +208,7 @@ editMedalDescription = Description
 editMedalIcon = Icon
 editMedalChooseIconImage = Choose Image...
 editMedalAllRequired = All fields are required when creating or editing a Medal.
+editMedalNotFound = The requested medal was not found.
 
 # AwardMedalsPanel
 awardMedalsMemberSearch = Member:
