Final touches on the medal list page.  There are two minor style issues remaining, but it's basically ready.

--- a/src/gwt/client/groups/GroupsMessages.properties
+++ b/src/gwt/client/groups/GroupsMessages.properties
@@ -197,6 +197,9 @@ medalListIntro = Here you will find a list of all medals awarded by the group as
 who have received them.
 medalListEmptyList = This group has no medals defined.
 medalListEdit = Edit
+medalListSeeAll = See all {0}
+medalListHide = Hide
+medalListNotAwarded = Has not yet been awarded.  How sad.
 
 # EditMedalPanel
 editMedalCreate = Create Medal
