--- a/src/gwt/client/shell/ShellMessages.properties
+++ b/src/gwt/client/shell/ShellMessages.properties
@@ -152,6 +152,8 @@ complainPost = [complain]
 
 rating = Rating: {0}
 showComment = [show]
+upComment = I like this.
+downComment = I don''t like this!
 
 deletePostConfirm = Are you sure you want to delete this comment?
 
