--- a/src/gwt/client/me/MeMessages.properties
+++ b/src/gwt/client/me/MeMessages.properties
@@ -118,12 +118,12 @@ permaNameConfigured = Your Permaname has been configured. Note: you must use \
 
 charitiesHeader = Charities
 charities = Whenever you make a purchase in Whirled, a donation will be made to the charity of \
-	your choice.  You can select the charity below.  Selecting 'Random Charity' will automatically \
-	select from one of these charities at random.
+    your choice.  You can select the charity below.  Selecting 'Random Charity' will automatically \
+    select from one of these charities at random.
 selectCharity = Select charity:
 defaultCharity = <Random Charity>
 echarityUpdated = The selected charity has been successfully updated.
-  
+
 #
 # Passport
 
@@ -135,6 +135,9 @@ passportStampsTitle = {0}''s Passport Stamps
 passportFinishedSeries = Earned {0}
 passportEmptyCategory = {0} has not earned any {1} stamps yet.
 passportPlayerNotFound = The player was not found.
+passportStampsLink = Passport Stamps
+passportMedalsLink = Group Medals
+passportMedalsTitle = {0}''s Group Medals
 
 #
 # Transaction history
@@ -240,7 +243,7 @@ dacontestJudging = Contest entries will be judged based on technical skill, orig
   creativity.<br /><br /><br />\
   <b>Judges:</b> <a href="#people-8">Cleaver: CEO and Hand-waver</a>, <br />\
   <a href="#people-12">Nemo: Lead Artist</a>, <a href="#people-13">Brittney: Artist</a>, <br /> \
-  <a href="#people-316">Billiam: Artist</a>, <a href="#people-12770">Vortex: Lead Agent</a> 
+  <a href="#people-316">Billiam: Artist</a>, <a href="#people-12770">Vortex: Lead Agent</a>
 
 #
 # Contests
