Holy hackery Batman, it's Facebook Connect integration. There are some annoying wrinkles still to be ironed out, and we don't post anything to a user's Facebook feed yet but we do:
- automatically create an account for a Facebook user with one click
- slurp in their first+last name, birthday, location to set up their display
  name and basic profile
- slurp in their friends list from Facebook and autofriend htem with all
  friends that are also Facebook Connect users (or who have used the
  forthcoming "Connect your Whirled account to your Facebook Account" button)

--- a/build.xml
+++ b/build.xml
@@ -67,6 +67,8 @@
     <file name="${extlibs.dir}/commons-lang.jar"/>
     <file name="${extlibs.dir}/commons-logging.jar"/>
     <file name="${extlibs.dir}/ehcache.jar"/>
+    <file name="${extlibs.dir}/facebook-java-api.jar"/>
+    <file name="${extlibs.dir}/facebook-java-api-schema.jar"/>
     <file name="${extlibs.dir}/ganymed.jar"/>
     <file name="${extlibs.dir}/getdown.jar"/>
     <file name="${extlibs.dir}/google-collect.jar"/>
@@ -424,6 +426,7 @@
         <filter token="dev_deployment" value="${dev_deployment}"/>
         <filter token="recaptcha_public" value="${recaptcha_token}"/>
         <filter token="billing_url" value="${billing_url}"/>
+        <filter token="facebook_api_key" value="${facebook.api_key}"/>
       </filterset>
     </copy>
   </target>
